--- a/tasks/debian-unattended-upgrades.yaml
+++ b/tasks/debian-unattended-upgrades.yaml
@@ -1,20 +1,21 @@
 ---
 
-- tasks: 
-  
-    name: "Install unattended-upgrades"
+  - name: "Install unattended-upgrades"
     apt: >
-      name=unattended-upgrades 
+      name=unattended-upgrades
       state=installed
 
+  - name: Configure auto-upgrade
     lineinfile: >
       dest=/etc/apt/apt.conf.d/20auto-upgrades
       line='Unattended-Upgrade::MinimalSteps "true";'
 
+  - name: Configure auto-upgrade
     lineinfile: >
       dest=/etc/apt/apt.conf.d/20auto-upgrades
       line='APT::Periodic::Update-Package-Lists "1";'
 
+  - name: Configure auto-upgrade
     lineinfile: >
       dest=/etc/apt/apt.conf.d/20auto-upgrades
       line='APT::Periodic::Unattended-Upgrade "1";'
