--- a/tasks/yum-cron-centos-7.yaml
+++ b/tasks/yum-cron-centos-7.yaml
@@ -1,18 +1,18 @@
 ---
 
   - name: Install yum-cron
-    yum: >
-      name=yum-cron
-      state=installed
+    yum:
+      name: yum-cron
+      state: installed
 
   - name: Configure yum-cron to apply updates
-    lineinfile: >
-      dest=/etc/yum/yum-cron.conf
-      regexp='^apply_updates'
-      line='apply_updates = yes'
+    lineinfile:
+      dest: /etc/yum/yum-cron.conf
+      regexp: '^apply_updates'
+      line: 'apply_updates = yes'
 
   - name: Enable yum-cron
-    service: >
-      name=yum-cron
-      state=started
-      enabled=true
+    service:
+      name: yum-cron
+      state: started
+      enabled: true
