added dnf for fedora >=22

--- a/tasks/yum-cron.yml
+++ b/tasks/yum-cron.yml
@@ -4,6 +4,7 @@
     yum:
       name: yum-cron
       state: installed
+      update_cache: yes
 
   - name: Configure yum-cron to apply updates
     lineinfile:
