--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,10 +1,13 @@
 --- 
   - include: yum-cron.yml 
     when: ( ansible_distribution == 'CentOS' 
-          or ansible_distribution == 'Red Hat Enterprise Linux' 
+          or ansible_distribution == 'RedHat' 
           and  "ansible_distribution_version" >= '7' )  or
           ( ansible_distribution == 'Fedora' 
           and ansible_distribution_major_version < "22" )
     
   - include: dnf-automatic.yml
     when: ansible_distribution == 'Fedora' and ansible_distribution_major_version >= "22"
+
+  - include: debian-unattended-upgrades.yml
+    when: ansible_distribution == 'Debian'
